tests/algorithms/x/Java/data_structures/queues/priority_queue_using_list.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden243_priority_queue_using_list3898331847/001/Main.java:56: error: incompatible types: Object[] cannot be converted to int[]
        return new FixedPriorityQueue(new int[][]{new Object[]{}, new Object[]{}, new Object[]{}});
                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden243_priority_queue_using_list3898331847/001/Main.java:56: error: incompatible types: Object[] cannot be converted to int[]
        return new FixedPriorityQueue(new int[][]{new Object[]{}, new Object[]{}, new Object[]{}});
                                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden243_priority_queue_using_list3898331847/001/Main.java:56: error: incompatible types: Object[] cannot be converted to int[]
        return new FixedPriorityQueue(new int[][]{new Object[]{}, new Object[]{}, new Object[]{}});
                                                                                  ^
3 errors
